src/component/input/input.module.scss
body {
    --bookshelf--ui--input--height: var(--input-height);
    --bookshelf--ui--input--border-radius: var(--input-radius);
    --bookshelf--ui--input--border-width: var(--input-border-width);
    --bookshelf--ui--input--font-weight: var(--input-font-weight);
    --bookshelf--ui--input--padding: var(--size-4-1) var(--size-4-2);
}

input.input {
    -webkit-appearance: none;
    width: 100%;
    height: var(--bookshelf--ui--input--height);
    border-style: solid;
    border-radius: var(--bookshelf--ui--input--border-radius);
    border-width: var(--bookshelf--ui--input--border-width);
    border-color: var(--bookshelf--ui--dropdown--border-color);
    font-weight: var(--bookshelf--ui--input--font-weight);
    padding: var(--bookshelf--ui--input--padding);
    box-sizing: border-box;

    &.error {
        color: var(--text-error);
        border-color: var(--background-modifier-error);
    }
}

.container {
    position: relative;
    display: inline-block;
}

.clear {
    position: absolute;
    background: transparent;
    border-radius: 50%;
    color: var(--search-clear-button-color);
    cursor: var(--cursor);
    top: 0;
    inset-inline-end: 2px;
    bottom: 0;
    line-height: 0;
    height: var(--bookshelf--ui--input--height);
    width: 28px;
    margin: auto;
    padding: 0 0;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: color 0.15s ease-in-out;

    &:hover,
    &:active {
        color: var(--text-normal);
        transition: color 0.15s ease-in-out;
    }

    &:after {
        content: '';
        height: var(--search-clear-button-size);
        width: var(--search-clear-button-size);
        display: block;
        background-color: currentColor;
        -webkit-mask-image: url("data:image/svg+xml,<svg viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6 12C9.31371 12 12 9.31371 12 6C12 2.68629 9.31371 0 6 0C2.68629 0 0 2.68629 0 6C0 9.31371 2.68629 12 6 12ZM3.8705 3.09766L6.00003 5.22718L8.12955 3.09766L8.9024 3.8705L6.77287 6.00003L8.9024 8.12955L8.12955 8.9024L6.00003 6.77287L3.8705 8.9024L3.09766 8.12955L5.22718 6.00003L3.09766 3.8705L3.8705 3.09766Z' fill='currentColor'/></svg>");
        -webkit-mask-repeat: no-repeat;
    }
}

